After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 114079 - 18.5 - Merge range of cells, move, undo. Rendering problem
18.5 - Merge range of cells, move, undo. Rendering problem
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: GUI
1.1.x
Other other
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2003-05-31 03:26 UTC by Chema Celorio
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Chema Celorio 2003-05-31 03:26:42 UTC
1. B8=8, B9=9, B10=10...B18=18
2. Select C8:E18
3. Merge Cells
4. Move the BIG cell somewhere, say that top/left margin is at I5
5. Undo

Rendering problem as in
http://www.gnome.org/~chema/gnumeric_18_5.png

After this rendering bug, playing with the cells to try to make them render
correctly will prove like a fun activity, not only will you get nice
rendering bugs but a backtrace as well:

Backtrace was generated from '/home/chema/cvs/gnome2/bin/gnumeric'

[New Thread 16384 (LWP 1552)]
0x40d0bbd6 in waitpid () from /lib/libpthread.so.0
  • #0 waitpid
    from /lib/libpthread.so.0
  • #1 libgnomeui_segv_handle
    at gnome-ui-init.c line 646
  • #2 __pthread_sighandler
    from /lib/libpthread.so.0
  • #3 <signal handler called>
  • #4 g_hash_table_lookup
    at ghash.c line 192
  • #5 sheet_redraw_cell
    at sheet.c line 1531
  • #6 sheet_cell_set_text
    at sheet.c line 1345
  • #7 cmd_set_text_redo
    at commands.c line 807
  • #8 command_push_undo
    at commands.c line 734
  • #9 cmd_set_text
    at commands.c line 890
  • #10 wbcg_edit_finish
    at workbook-edit.c line 183
  • #11 item_grid_button_press
    at item-grid.c line 937
  • #12 foo_canvas_marshal_BOOLEAN__BOXED
    at foo-canvas-marshal.c line 123
  • #13 g_type_class_meta_marshal
    at gclosure.c line 514
  • #14 g_closure_invoke
    at gclosure.c line 437
  • #15 signal_emit_unlocked_R
    at gsignal.c line 2860
  • #16 g_signal_emit_valist
    detail=0, var_args=0xbffff340 "\\
Comment 1 Jody Goldberg 2003-05-31 14:05:22 UTC
I can not replicate this.
Comment 2 Morten Welinder 2003-05-31 14:23:28 UTC
I see some variant of this too.  (I see "16" through "18" rendered
normally, but no other values.)
Comment 3 Jody Goldberg 2003-05-31 15:23:49 UTC
Ok, my build was just being forgiving.

Excellent bug.
Two memory errors for the price of one.
Both of which were in 1.0.x
Comment 4 Marco Pesenti Gritti 2004-02-18 19:23:54 UTC
*** Bug 134741 has been marked as a duplicate of this bug. ***